# anthem

./: .gitattributes  .gitignore  .gitmodules  .metadata  AGENTS.md  Cargo.toml  README.md  analysis_options.yaml  bindgen.ps1  build.yaml  pubspec.yaml  rid_build.rs  web_dev_config.yaml
assets/: anthem-icon.afdesign
engine/: .clang-format  .clang-format-ignore  .clang-tidy  CMakeLists.txt  build.ps1  build_test.ps1
engine/include/: CMakeLists.txt  juce_audio_basics_wasm.cpp  juce_audio_basics_wasm.h  juce_core_wasm.cpp  juce_core_wasm.h  juce_events_wasm.cpp  juce_events_wasm.h
engine/messages/: messages.fbs  processing_graph.fbs  processors.fbs  project.fbs
engine/src/: anthem.cpp  anthem.h  comms.h  console_logger.h  main.cpp  main_wasm.cpp  plugin_window.cpp  plugin_window.h  test.cpp  test.h  wasm_main.cpp
engine/src/command_handlers/: model_sync_command_handler.cpp  model_sync_command_handler.h  processing_graph_command_handler.cpp  processing_graph_command_handler.h  processor_command_handler.cpp  processor_command_handler.h  project_command_handler.cpp  project_command_handler.h  sequencer_command_handler.cpp  visualization_command_handler.cpp  visualization_command_handler.h
engine/src/modules/codegen_helpers/: anthem_model_base.h  anthem_model_unordered_map.h  anthem_model_vector.h  model_base.h  model_unordered_map.h  model_vector.h  observability_helpers.h
engine/src/modules/command_handlers/: model_sync_command_handler.cpp  model_sync_command_handler.h  processing_graph_command_handler.cpp  processing_graph_command_handler.h  sequencer_command_handler.cpp  sequencer_command_handler.h  test_command_handler.cpp  test_command_handler.h  visualization_command_handler.cpp  visualization_command_handler.h
engine/src/modules/core/: anthem.cpp  anthem.h  anthem_audio_callback.cpp  anthem_audio_callback.h  audio_callback.cpp  audio_callback.h  command_handler.cpp  command_handler.h  comms.cpp  comms.h  comms_desktop.cpp  comms_desktop.h  comms_methods_for_ui_wasm.cpp  comms_methods_for_ui_wasm.h  comms_pipe_wasm.cpp  comms_pipe_wasm.h  comms_ring_buffer_wasm.h  comms_wasm.cpp  comms_wasm.h  constants.h  engine.cpp  engine.h  processing_graph_node_initialization_session.cpp  processing_graph_node_initialization_session.h  project.h  sequence.cpp  sequence.h  sequencer.cpp  sequencer.h  song.h
engine/src/modules/core/adapters/: transport_adapters.cpp  transport_adapters.h
engine/src/modules/core/visualization/: global_visualization_sources.cpp  global_visualization_sources.h  visualization_broker.cpp  visualization_broker.h  visualization_provider.h
engine/src/modules/processing_graph/: anthem_graph.cpp  anthem_graph.h  anthem_graph_node.h  anthem_graph_topology.cpp  anthem_processor.h  anthem_processor_config.cpp  anthem_processor_config.h  anthem_processor_port_config.h  graph_processor.cpp  graph_processor.h
engine/src/modules/processing_graph/compiler/: anthem_graph_compilation_result.cpp  anthem_graph_compilation_result.h  anthem_graph_compiled_node.h  anthem_graph_compiler.cpp  anthem_graph_compiler.h  anthem_graph_compiler_edge.h  anthem_graph_compiler_node.cpp  anthem_graph_compiler_node.h  anthem_graph_process_context.cpp  anthem_graph_process_context.h  anthem_node_process_context.cpp  anthem_node_process_context.h  anthem_process_context.cpp  anthem_process_context.h  graph_action.h  graph_compilation_result.cpp  graph_compilation_result.h  graph_compiler.cpp  graph_compiler.h  graph_compiler_edge.h  graph_compiler_node.cpp  graph_compiler_node.h  graph_process_context.cpp  graph_process_context.h  node_process_context.cpp  node_process_context.h
engine/src/modules/processing_graph/debug/: generate_graphvis_from_graph.cpp  generate_graphvis_from_graph.h
engine/src/modules/processing_graph/events/: anthem_processor_event.h  anthem_processor_note_events.h
engine/src/modules/processing_graph_threaded/: graph_processor.cpp  graph_processor.h
engine/src/modules/processors/: balance.cpp  balance.h  db_meter.cpp  db_meter.h  db_meter_accumulator.h  gain.cpp  gain.h  gain_node.cpp  gain_node.h  gain_parameter_mapping.h  live_event_provider.cpp  live_event_provider.h  master_output.cpp  master_output.h  master_output_node.cpp  master_output_node.h  note_tracker.h  sequence_note_provider.cpp  sequence_note_provider.h  simple_midi_generator.cpp  simple_midi_generator.h  simple_midi_generator_node.cpp  simple_midi_generator_node.h  simple_volume_lfo.cpp  simple_volume_lfo.h  simple_volume_lfo_node.cpp  simple_volume_lfo_node.h  tone_generator.cpp  tone_generator.h  tone_generator_node.cpp  tone_generator_node.h  utility.cpp  utility.h  vst3_processor.cpp  vst3_processor.h
engine/src/modules/sequencer/: time.h
engine/src/modules/util/: arena_allocator.h  double_buffered_value.h  fast_atan2.cpp  fast_atan2.h  id_generator.cpp  id_generator.h  intentionally_leak.cpp  intentionally_leak.h  linear_parameter_smoother.cpp  linear_parameter_smoother.h  ring_buffer.h  thread_safe_queue.h
engine/src/test/: test.cpp
engine/test/: test.cpp  test_constants.h
engine/test/modules/core/: sequencer_test.h
engine/test/modules/processing_graph/: graph_test_helpers.h
engine/test/modules/processors/: balance_test.h  db_meter_test.h  gain_parameter_mapping_test.h  gain_test.h  live_event_provider_test.h  sequence_note_provider_test.h  utility_test.h
engine/test/modules/sequencer/: time_test.h
engine/test/modules/util/: arena_allocator_test.h  note_tracker_test.h  ring_buffer_test.h
engine_connector/: CMakeLists.txt  build.ps1
engine_connector/src/: main.cpp
rust/: .gitignore  Cargo.toml  Cargo.toml.release
rust/engine/: Cargo.toml  README.md
rust/engine/anthem_engine_model/src/: pattern.rs
rust/engine/src/: main.rs
rust/engine_model/: Cargo.toml
rust/engine_model/src/: lib.rs  message.rs  pattern.rs  project.rs  song.rs
rust/engine_model/src/messages/: mod.rs
rust/engine_model/src/util/: id.rs  mod.rs
rust/src/: api.rs  engine_bridge.rs  lib.rs  state.rs
rust/src/dependencies/: mod.rs
rust/src/dependencies/engine_model/: mod.rs
(+800 files in other folders)
