[package]
name = "anthem"
version = "0.1.0"
authors = ["Joshua Wade"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "rid_build"
path = "rid_build.rs"

[dependencies]
cbindgen = "0.20.0"
rid_build = { path = "../../rid/rid-build" }
rid = { path = "../../rid" }
rand = "0.8.4"
serde = "1.0.68"
serde_json = "1.0.68"
