[package]
name = "anthem"
version = "0.1.0"
authors = ["Joshua Wade"]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "rid_build"
path = "rid_build.rs"

[dependencies]
cbindgen = "0.20.0"
anthem_engine_model = { git = "https://github.com/SecondFlight/anthem-engine.git" }
rid_build = { git = "https://github.com/thlorenz/rid.git" }
rid = { git = "https://github.com/thlorenz/rid.git" }
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
interprocess = "1.1.1"
bincode = "1.3.3"
