[package]
name = "anthem"
version = "0.1.0"
edition = "2021"

[lib]
name = "anthem"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
flutter_rust_bridge = "1.10.0"
num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.23.14" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.