[package]
name = "anthem"
version = "0.1.0"
edition = "2021"

[lib]
name = "anthem"
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
flutter_rust_bridge = "1.26.0"
num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.23.14" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
lazy_static = "1.4.0"
interprocess = "1.1.1"
serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
# anthem_engine_model = { path = "./engine_model" }
rand = "0.8.4"
tfc="0.6.0"
